# poco-test-app

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  make_boost.sh  make_poco.sh  test.sh
test/: CMakeLists.txt  test_example.cpp  test_json.cpp
